fix(client): Don't show scrollbars during toasts

--- a/Website/src/globalStyle.css
+++ b/Website/src/globalStyle.css
@@ -8,6 +8,7 @@ html, body, main {
 	width: 100%;
 	height: 100%;
 	margin: 0;
+	overflow: hidden;
 }
 
 body {
